ckad/ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cat-white
spec:
  selector:
    app: web-cat-white
  ports:
  - port: 80
    targetPort: 80
